vlib/v/checker/tests/prefix_addr_err.vv
fn main() {
	b := &'foo'.len
}
